fixed modal on mobile

--- a/src/views/category/category_component.scss
+++ b/src/views/category/category_component.scss
@@ -160,3 +160,6 @@ rating-container {
     display: none;
   }
 }
+#exampleModal{
+  max-width: 100vw;
+}
